cw.output
Nonterminals useless in grammar

   FULL_IDENTIFICATOR


Terminals unused in grammar

   COLON_EQ
   NIL_KEYWORD
   DEFER_KEYWORD
   SHIFT_LEFT
   SHIFT_RIGHT
   OPER_ASSIGNMENT
   FLOAT
   TRUE_FALSE
   COMPLEX
   STRUCT_KEYWORD
   INTERFACE_KEYWORD
   CONST_KEYWORD
   VAR_KEYWORD
   FUNC_KEYWORD
   RETURN_KEYWORD
   IF_KEYWORD
   ELSE_KEYWORD
   SWITCH_KEYWORD
   CASE_KEYWORD
   DEFAULT_KEYWORD
   EQ_RELATION
   GREATER_RELATION
   LESS_RELATION
   EQ_GREATER_RELATION
   EQ_LESS_RELATION
   NOT_EQ_RELATION
   FOR_KEYWORD
   BREAK_KEYWORD
   CONTINUE_KEYWORD
   RANGE_KEYWORD
   GO_KEYWORD
   OR_OPERATION
   AND_OPERATION
   NOT_OPERATION
   '-'
   '+'
   '%'
   '/'
   '|'
   '^'
   '&'
   DECREMENT
   INCREMENT
   LOWER_THAN_BRACKET
   '.'


Rules useless in grammar

   25 FULL_IDENTIFICATOR: IDENTIFICATOR
   26                   | FULL_IDENTIFICATOR '.' IDENTIFICATOR


Rules useless in parser due to conflicts

   13 POINTER_INDEXATION: POINTER_INDEXATION '*'


State 33 conflicts: 8 reduce/reduce


Grammar

    0 $accept: S $end

    1 S: PACKAGE GLOBALS

    2 PACKAGE: PACKAGE_KEYWORD IDENTIFICATOR '\n'

    3 IMPORT: IMPORT_KEYWORD STRING
    4       | IMPORT_KEYWORD '(' '\n' IMPORT_MULTIPLE_STRING ')'

    5 IMPORT_MULTIPLE_STRING: STRING '\n' IMPORT_MULTIPLE_STRING
    6                       | /* empty */

    7 GLOBALS: GLOBAL '\n'
    8        | GLOBALS '\n' GLOBAL

    9 GLOBAL: /* empty */
   10       | IMPORT
   11       | TYPEDEF

   12 POINTER_INDEXATION: '*'
   13                   | POINTER_INDEXATION '*'

   14 TYPE: INT_TYPE
   15     | FLOAT_TYPE
   16     | COMPLEX_TYPE
   17     | BOOL_TYPE
   18     | STRING_TYPE
   19     | '[' INTEGER ']' TYPE
   20     | '[' DOT_DOT_DOT ']' TYPE
   21     | '[' ']' TYPE
   22     | POINTER_INDEXATION TYPE
   23     | IDENTIFICATOR

   24 TYPEDEF: TYPE_KEYWORD IDENTIFICATOR TYPE


Terminals, with rules where they appear

$end (0) 0
'\n' (10) 2 4 5 7 8
'%' (37)
'&' (38)
'(' (40) 4
')' (41) 4
'*' (42) 12 13
'+' (43)
'-' (45)
'.' (46)
'/' (47)
'[' (91) 19 20 21
']' (93) 19 20 21
'^' (94)
'|' (124)
error (256)
IDENTIFICATOR (258) 2 23 24
COLON_EQ (259)
DOT_DOT_DOT (260) 20
NIL_KEYWORD (261)
DEFER_KEYWORD (262)
SHIFT_LEFT (263)
SHIFT_RIGHT (264)
OPER_ASSIGNMENT (265)
STRING (266) 3 5
INTEGER (267) 19
FLOAT (268)
TRUE_FALSE (269)
COMPLEX (270)
TYPE_KEYWORD (271) 24
STRUCT_KEYWORD (272)
INTERFACE_KEYWORD (273)
CONST_KEYWORD (274)
PACKAGE_KEYWORD (275) 2
IMPORT_KEYWORD (276) 3 4
VAR_KEYWORD (277)
FUNC_KEYWORD (278)
RETURN_KEYWORD (279)
IF_KEYWORD (280)
ELSE_KEYWORD (281)
SWITCH_KEYWORD (282)
CASE_KEYWORD (283)
DEFAULT_KEYWORD (284)
EQ_RELATION (285)
GREATER_RELATION (286)
LESS_RELATION (287)
EQ_GREATER_RELATION (288)
EQ_LESS_RELATION (289)
NOT_EQ_RELATION (290)
FOR_KEYWORD (291)
BREAK_KEYWORD (292)
CONTINUE_KEYWORD (293)
RANGE_KEYWORD (294)
GO_KEYWORD (295)
INT_TYPE (296) 14
FLOAT_TYPE (297) 15
COMPLEX_TYPE (298) 16
BOOL_TYPE (299) 17
STRING_TYPE (300) 18
OR_OPERATION (301)
AND_OPERATION (302)
NOT_OPERATION (303)
DECREMENT (304)
INCREMENT (305)
LOWER_THAN_BRACKET (306)


Nonterminals, with rules where they appear

$accept (66)
    on left: 0
S (67)
    on left: 1, on right: 0
PACKAGE (68)
    on left: 2, on right: 1
IMPORT (69)
    on left: 3 4, on right: 10
IMPORT_MULTIPLE_STRING (70)
    on left: 5 6, on right: 4 5
GLOBALS (71)
    on left: 7 8, on right: 1 8
GLOBAL (72)
    on left: 9 10 11, on right: 7 8
POINTER_INDEXATION (73)
    on left: 12 13, on right: 13 22
TYPE (74)
    on left: 14 15 16 17 18 19 20 21 22 23, on right: 19 20 21 22 24
TYPEDEF (75)
    on left: 24, on right: 11


State 0

    0 $accept: . S $end

    PACKAGE_KEYWORD  shift, and go to state 1

    S        go to state 2
    PACKAGE  go to state 3


State 1

    2 PACKAGE: PACKAGE_KEYWORD . IDENTIFICATOR '\n'

    IDENTIFICATOR  shift, and go to state 4


State 2

    0 $accept: S . $end

    $end  shift, and go to state 5


State 3

    1 S: PACKAGE . GLOBALS

    TYPE_KEYWORD    shift, and go to state 6
    IMPORT_KEYWORD  shift, and go to state 7

    $default  reduce using rule 9 (GLOBAL)

    IMPORT   go to state 8
    GLOBALS  go to state 9
    GLOBAL   go to state 10
    TYPEDEF  go to state 11


State 4

    2 PACKAGE: PACKAGE_KEYWORD IDENTIFICATOR . '\n'

    '\n'  shift, and go to state 12


State 5

    0 $accept: S $end .

    $default  accept


State 6

   24 TYPEDEF: TYPE_KEYWORD . IDENTIFICATOR TYPE

    IDENTIFICATOR  shift, and go to state 13


State 7

    3 IMPORT: IMPORT_KEYWORD . STRING
    4       | IMPORT_KEYWORD . '(' '\n' IMPORT_MULTIPLE_STRING ')'

    STRING  shift, and go to state 14
    '('     shift, and go to state 15


State 8

   10 GLOBAL: IMPORT .

    $default  reduce using rule 10 (GLOBAL)


State 9

    1 S: PACKAGE GLOBALS .
    8 GLOBALS: GLOBALS . '\n' GLOBAL

    '\n'  shift, and go to state 16

    $default  reduce using rule 1 (S)


State 10

    7 GLOBALS: GLOBAL . '\n'

    '\n'  shift, and go to state 17


State 11

   11 GLOBAL: TYPEDEF .

    $default  reduce using rule 11 (GLOBAL)


State 12

    2 PACKAGE: PACKAGE_KEYWORD IDENTIFICATOR '\n' .

    $default  reduce using rule 2 (PACKAGE)


State 13

   24 TYPEDEF: TYPE_KEYWORD IDENTIFICATOR . TYPE

    IDENTIFICATOR  shift, and go to state 18
    INT_TYPE       shift, and go to state 19
    FLOAT_TYPE     shift, and go to state 20
    COMPLEX_TYPE   shift, and go to state 21
    BOOL_TYPE      shift, and go to state 22
    STRING_TYPE    shift, and go to state 23
    '*'            shift, and go to state 24
    '['            shift, and go to state 25

    POINTER_INDEXATION  go to state 26
    TYPE                go to state 27


State 14

    3 IMPORT: IMPORT_KEYWORD STRING .

    $default  reduce using rule 3 (IMPORT)


State 15

    4 IMPORT: IMPORT_KEYWORD '(' . '\n' IMPORT_MULTIPLE_STRING ')'

    '\n'  shift, and go to state 28


State 16

    8 GLOBALS: GLOBALS '\n' . GLOBAL

    TYPE_KEYWORD    shift, and go to state 6
    IMPORT_KEYWORD  shift, and go to state 7

    $default  reduce using rule 9 (GLOBAL)

    IMPORT   go to state 8
    GLOBAL   go to state 29
    TYPEDEF  go to state 11


State 17

    7 GLOBALS: GLOBAL '\n' .

    $default  reduce using rule 7 (GLOBALS)


State 18

   23 TYPE: IDENTIFICATOR .

    $default  reduce using rule 23 (TYPE)


State 19

   14 TYPE: INT_TYPE .

    $default  reduce using rule 14 (TYPE)


State 20

   15 TYPE: FLOAT_TYPE .

    $default  reduce using rule 15 (TYPE)


State 21

   16 TYPE: COMPLEX_TYPE .

    $default  reduce using rule 16 (TYPE)


State 22

   17 TYPE: BOOL_TYPE .

    $default  reduce using rule 17 (TYPE)


State 23

   18 TYPE: STRING_TYPE .

    $default  reduce using rule 18 (TYPE)


State 24

   12 POINTER_INDEXATION: '*' .

    $default  reduce using rule 12 (POINTER_INDEXATION)


State 25

   19 TYPE: '[' . INTEGER ']' TYPE
   20     | '[' . DOT_DOT_DOT ']' TYPE
   21     | '[' . ']' TYPE

    DOT_DOT_DOT  shift, and go to state 30
    INTEGER      shift, and go to state 31
    ']'          shift, and go to state 32


State 26

   13 POINTER_INDEXATION: POINTER_INDEXATION . '*'
   22 TYPE: POINTER_INDEXATION . TYPE

    IDENTIFICATOR  shift, and go to state 18
    INT_TYPE       shift, and go to state 19
    FLOAT_TYPE     shift, and go to state 20
    COMPLEX_TYPE   shift, and go to state 21
    BOOL_TYPE      shift, and go to state 22
    STRING_TYPE    shift, and go to state 23
    '*'            shift, and go to state 33
    '['            shift, and go to state 25

    POINTER_INDEXATION  go to state 26
    TYPE                go to state 34


State 27

   24 TYPEDEF: TYPE_KEYWORD IDENTIFICATOR TYPE .

    $default  reduce using rule 24 (TYPEDEF)


State 28

    4 IMPORT: IMPORT_KEYWORD '(' '\n' . IMPORT_MULTIPLE_STRING ')'

    STRING  shift, and go to state 35

    $default  reduce using rule 6 (IMPORT_MULTIPLE_STRING)

    IMPORT_MULTIPLE_STRING  go to state 36


State 29

    8 GLOBALS: GLOBALS '\n' GLOBAL .

    $default  reduce using rule 8 (GLOBALS)


State 30

   20 TYPE: '[' DOT_DOT_DOT . ']' TYPE

    ']'  shift, and go to state 37


State 31

   19 TYPE: '[' INTEGER . ']' TYPE

    ']'  shift, and go to state 38


State 32

   21 TYPE: '[' ']' . TYPE

    IDENTIFICATOR  shift, and go to state 18
    INT_TYPE       shift, and go to state 19
    FLOAT_TYPE     shift, and go to state 20
    COMPLEX_TYPE   shift, and go to state 21
    BOOL_TYPE      shift, and go to state 22
    STRING_TYPE    shift, and go to state 23
    '*'            shift, and go to state 24
    '['            shift, and go to state 25

    POINTER_INDEXATION  go to state 26
    TYPE                go to state 39


State 33

   12 POINTER_INDEXATION: '*' .
   13                   | POINTER_INDEXATION '*' .

    IDENTIFICATOR  reduce using rule 12 (POINTER_INDEXATION)
    IDENTIFICATOR  [reduce using rule 13 (POINTER_INDEXATION)]
    INT_TYPE       reduce using rule 12 (POINTER_INDEXATION)
    INT_TYPE       [reduce using rule 13 (POINTER_INDEXATION)]
    FLOAT_TYPE     reduce using rule 12 (POINTER_INDEXATION)
    FLOAT_TYPE     [reduce using rule 13 (POINTER_INDEXATION)]
    COMPLEX_TYPE   reduce using rule 12 (POINTER_INDEXATION)
    COMPLEX_TYPE   [reduce using rule 13 (POINTER_INDEXATION)]
    BOOL_TYPE      reduce using rule 12 (POINTER_INDEXATION)
    BOOL_TYPE      [reduce using rule 13 (POINTER_INDEXATION)]
    STRING_TYPE    reduce using rule 12 (POINTER_INDEXATION)
    STRING_TYPE    [reduce using rule 13 (POINTER_INDEXATION)]
    '*'            reduce using rule 12 (POINTER_INDEXATION)
    '*'            [reduce using rule 13 (POINTER_INDEXATION)]
    '['            reduce using rule 12 (POINTER_INDEXATION)
    '['            [reduce using rule 13 (POINTER_INDEXATION)]
    $default       reduce using rule 12 (POINTER_INDEXATION)


State 34

   22 TYPE: POINTER_INDEXATION TYPE .

    $default  reduce using rule 22 (TYPE)


State 35

    5 IMPORT_MULTIPLE_STRING: STRING . '\n' IMPORT_MULTIPLE_STRING

    '\n'  shift, and go to state 40


State 36

    4 IMPORT: IMPORT_KEYWORD '(' '\n' IMPORT_MULTIPLE_STRING . ')'

    ')'  shift, and go to state 41


State 37

   20 TYPE: '[' DOT_DOT_DOT ']' . TYPE

    IDENTIFICATOR  shift, and go to state 18
    INT_TYPE       shift, and go to state 19
    FLOAT_TYPE     shift, and go to state 20
    COMPLEX_TYPE   shift, and go to state 21
    BOOL_TYPE      shift, and go to state 22
    STRING_TYPE    shift, and go to state 23
    '*'            shift, and go to state 24
    '['            shift, and go to state 25

    POINTER_INDEXATION  go to state 26
    TYPE                go to state 42


State 38

   19 TYPE: '[' INTEGER ']' . TYPE

    IDENTIFICATOR  shift, and go to state 18
    INT_TYPE       shift, and go to state 19
    FLOAT_TYPE     shift, and go to state 20
    COMPLEX_TYPE   shift, and go to state 21
    BOOL_TYPE      shift, and go to state 22
    STRING_TYPE    shift, and go to state 23
    '*'            shift, and go to state 24
    '['            shift, and go to state 25

    POINTER_INDEXATION  go to state 26
    TYPE                go to state 43


State 39

   21 TYPE: '[' ']' TYPE .

    $default  reduce using rule 21 (TYPE)


State 40

    5 IMPORT_MULTIPLE_STRING: STRING '\n' . IMPORT_MULTIPLE_STRING

    STRING  shift, and go to state 35

    $default  reduce using rule 6 (IMPORT_MULTIPLE_STRING)

    IMPORT_MULTIPLE_STRING  go to state 44


State 41

    4 IMPORT: IMPORT_KEYWORD '(' '\n' IMPORT_MULTIPLE_STRING ')' .

    $default  reduce using rule 4 (IMPORT)


State 42

   20 TYPE: '[' DOT_DOT_DOT ']' TYPE .

    $default  reduce using rule 20 (TYPE)


State 43

   19 TYPE: '[' INTEGER ']' TYPE .

    $default  reduce using rule 19 (TYPE)


State 44

    5 IMPORT_MULTIPLE_STRING: STRING '\n' IMPORT_MULTIPLE_STRING .

    $default  reduce using rule 5 (IMPORT_MULTIPLE_STRING)
